Improved torrent trackers page of download properties dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9117 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1830,17 +1830,19 @@ STYLE DS_SETFONT | DS_3DLOOK | WS_CHILD | WS_DISABLED | WS_CAPTION
 CAPTION "Download Properties"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_TORRENT_TRACKER,100,14,186,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_TORRENT_TRACKER,100,14,186,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_TORRENT_COMPLETED,100,34,58,12,ES_CENTER | ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     EDITTEXT        IDC_TORRENT_INCOMPLETE,226,34,60,12,ES_CENTER | ES_AUTOHSCROLL | ES_READONLY | NOT WS_TABSTOP
     COMBOBOX        IDC_TORRENT_TRACKERMODE,100,53,118,66,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Refresh",IDC_TORRENT_REFRESH,226,51,60,16
-    CONTROL         "",IDC_TORRENT_TRACKERS,"SysListView32",LVS_REPORT | LVS_SHAREIMAGELISTS | WS_BORDER | WS_TABSTOP,7,82,286,131
+    CONTROL         "",IDC_TORRENT_TRACKERS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHAREIMAGELISTS | LVS_EDITLABELS | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,82,260,131
     LTEXT           "Tracker:",IDC_STATIC,14,14,84,12,SS_CENTERIMAGE
     GROUPBOX        "&Current Tracker:",IDC_STATIC,7,3,286,71
     LTEXT           "Completed (Seeds):",IDC_STATIC,14,34,84,12,SS_CENTERIMAGE
     RTEXT           "Incomplete:",IDC_STATIC,163,34,60,12,SS_CENTERIMAGE
     LTEXT           "Tracker Mode:",IDC_STATIC,14,54,78,9
+    PUSHBUTTON      "",IDC_TORRENT_TRACKERS_ADD,275,82,18,16,BS_ICON
+    PUSHBUTTON      "",IDC_TORRENT_TRACKERS_DEL,275,103,18,16,BS_ICON
 END
 
 IDD_TORRENT_FILES DIALOGEX 0, 0, 300, 220
