Unified installer script.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9144 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/setup/Installer_10.vcxproj
+++ b/setup/Installer_10.vcxproj
@@ -80,7 +80,7 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CustomBuild Include="scripts\main_10.iss">
+    <CustomBuild Include="scripts\main.iss">
       <FileType>Document</FileType>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Performing Installer Build</Message>
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">"%ProgramFiles%\Inno Setup 5\ISCC.exe" "%(FullPath)" "/dConfigurationName=$(Configuration)" "/dPlatformName=$(Platform)" /v9
