--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -402,13 +402,15 @@ CAPTION "Advanced"
 FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     CONTROL         "List1",IDC_PROPERTIES,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | WS_BORDER | WS_TABSTOP,7,7,268,138
-    EDITTEXT        IDC_VALUE,60,165,45,12,ES_AUTOHSCROLL | ES_NUMBER
-    CONTROL         "Spin1",IDC_VALUE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS | WS_DISABLED,105,165,8,12
-    PUSHBUTTON      "Set Default",IDC_DEFAULT_VALUE,194,163,72,14
+    EDITTEXT        IDC_VALUE,60,163,125,16,ES_AUTOHSCROLL | NOT WS_VISIBLE
+    CONTROL         "Spin1",IDC_VALUE_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS | NOT WS_VISIBLE | WS_DISABLED,169,160,11,16
+    PUSHBUTTON      "Set Default",IDC_DEFAULT_VALUE,194,163,72,16
     GROUPBOX        "Setting Properties:",IDC_STATIC,7,150,268,63
     LTEXT           "Value:",IDC_STATIC,15,165,40,12,SS_CENTERIMAGE
     LTEXT           "Description:",IDC_STATIC,15,180,40,12,SS_CENTERIMAGE | NOT WS_VISIBLE
-    EDITTEXT        IDC_DESCRIPTION,60,180,206,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_VSCROLL
+    EDITTEXT        IDC_DESCRIPTION,60,182,206,25,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | NOT WS_VISIBLE | WS_VSCROLL
+    CONTROL         "",IDC_BOOL,"Button",BS_AUTOCHECKBOX | NOT WS_VISIBLE | WS_TABSTOP,60,163,125,16
+    COMBOBOX        IDC_FONT,60,163,125,200,CBS_DROPDOWNLIST | CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_SETTINGS_DOWNLOADS DIALOGEX 0, 0, 282, 220
@@ -3219,6 +3221,22 @@ END
 
 STRINGTABLE
 BEGIN
+    IDS_BT_CLIENT_DROP_CONNECTING "BitTorrent connection to %s was dropped."
+    IDS_BT_CLIENT_DROP_HANDSHAKE "BitTorrent handshake with %s was dropped."
+    IDS_BT_CLIENT_DROP_CONNECTED "BitTorrent coupling with %s was dropped."
+    IDS_BT_CLIENT_DUPLICATE "BitTorrent coupling with %s not accepted, a connection to this client already exists."
+    IDS_BT_CLIENT_MAX_CONNECTIONS 
+                            "BitTorrent coupling with %s not accepted, maximum connections reached."
+    IDS_BT_PRIVATE          "Private torrent"
+    IDS_BT_ENCODING         "Encoding error"
+    IDS_BT_UPDATE_TITLE     "Updating Bittorrent Downloads..."
+    IDS_BT_UPDATE_CONVERTING "Converting Torrent:"
+    IDS_DOWNLOAD_TASK       "Download File or Torrent"
+    IDS_SEARCH_TASK         "New Search"
+END
+
+STRINGTABLE
+BEGIN
     IDS_GENERAL_RETRY       "Retry"
     IDS_GENERAL_IGNORE      "Ignore"
     IDS_GENERAL_TRYAGAIN    "Try Again"
@@ -4220,20 +4238,6 @@ BEGIN
     IDS_BT_SEED_VERIFY_FAIL "An error was detected in the file ""%s""."
     IDS_BT_TRACKER_DOWN     "Unable to communicate with tracker"
     IDS_BT_TRACKER_MULTI    "Trying next tracker (%i of %i)"
-END
-
-STRINGTABLE
-BEGIN
-    IDS_BT_CLIENT_DROP_CONNECTING "BitTorrent connection to %s was dropped."
-    IDS_BT_CLIENT_DROP_HANDSHAKE "BitTorrent handshake with %s was dropped."
-    IDS_BT_CLIENT_DROP_CONNECTED "BitTorrent coupling with %s was dropped."
-    IDS_BT_CLIENT_DUPLICATE "BitTorrent coupling with %s not accepted, a connection to this client already exists."
-    IDS_BT_CLIENT_MAX_CONNECTIONS 
-                            "BitTorrent coupling with %s not accepted, maximum connections reached."
-    IDS_BT_PRIVATE          "Private torrent"
-    IDS_BT_ENCODING         "Encoding error"
-    IDS_BT_UPDATE_TITLE     "Updating Bittorrent Downloads..."
-    IDS_BT_UPDATE_CONVERTING "Converting Torrent:"
 END
 
 STRINGTABLE
