--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder_10.vcxproj
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder_10.vcxproj
@@ -214,6 +214,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <FunctionLevelLinking>true</FunctionLevelLinking>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
