New torrent codepage defaulted to UTF-8.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9176 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_10.vcxproj
+++ b/TorrentWizard/TorrentWizard_10.vcxproj
@@ -289,7 +289,7 @@
     <None Include="res\TorrentWizard.ico" />
     <None Include="Res\TorrentWizard.rc2" />
     <None Include="Res\Uninstall.ICO" />
-    <None Include="..\shareaza\Res\Wizard.bmp" />
+    <None Include="res\Wizard.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TorrentWizard.rc" />
