Fixed "disappearing" trackers and added "Rename" button inside Download properties dialog.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9238 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -1845,6 +1845,7 @@ BEGIN
     LTEXT           "Tracker Mode:",IDC_STATIC,14,54,78,9
     PUSHBUTTON      "",IDC_TORRENT_TRACKERS_ADD,275,82,18,16,BS_ICON
     PUSHBUTTON      "",IDC_TORRENT_TRACKERS_DEL,275,103,18,16,BS_ICON
+    PUSHBUTTON      "",IDC_TORRENT_TRACKERS_REN,275,124,18,16,BS_ICON
 END
 
 IDD_TORRENT_FILES DIALOGEX 0, 0, 300, 220
