Extracted CSecureRule class to different file (to help OldDeath).
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9265 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_10.vcxproj
+++ b/shareaza/Shareaza_10.vcxproj
@@ -428,6 +428,7 @@
     <ClCompile Include="SchemaChild.cpp" />
     <ClCompile Include="SchemaMember.cpp" />
     <ClCompile Include="SearchManager.cpp" />
+    <ClCompile Include="SecureRule.cpp" />
     <ClCompile Include="Security.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="ShakeNeighbour.cpp" />
@@ -848,6 +849,7 @@
     <ClInclude Include="SchemaChild.h" />
     <ClInclude Include="SchemaMember.h" />
     <ClInclude Include="SearchManager.h" />
+    <ClInclude Include="SecureRule.h" />
     <ClInclude Include="Security.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="ShakeNeighbour.h" />
