--- a/shareaza/Shareaza_10.vcxproj.filters
+++ b/shareaza/Shareaza_10.vcxproj.filters
@@ -1140,6 +1140,9 @@
     <ClCompile Include="WndPrivateChat.cpp">
       <Filter>Source Files\Windows</Filter>
     </ClCompile>
+    <ClCompile Include="SecureRule.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Midl Include="Shareaza.idl">
@@ -2291,6 +2294,9 @@
     </ClInclude>
     <ClInclude Include="WndPrivateChat.h">
       <Filter>Header Files\Windows</Filter>
+    </ClInclude>
+    <ClInclude Include="SecureRule.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
