--- a/GeoIP/GeoIP_10.vcxproj
+++ b/GeoIP/GeoIP_10.vcxproj
@@ -106,6 +106,12 @@
       </Command>
     </PreBuildEvent>
     <PreBuildEvent />
+    <PostBuildEvent>
+      <Command>xcopy /y /f "$(ProjectDir)GeoIP.dat" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Installing GeoIP database...</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <CustomBuildStep>
@@ -133,6 +139,12 @@
       </Command>
     </PreBuildEvent>
     <PreBuildEvent />
+    <PostBuildEvent>
+      <Command>xcopy /y /f "$(ProjectDir)GeoIP.dat" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Installing GeoIP database...</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <CustomBuildStep>
@@ -166,6 +178,12 @@
       </Command>
     </PreBuildEvent>
     <PreBuildEvent />
+    <PostBuildEvent>
+      <Command>xcopy /y /f "$(ProjectDir)GeoIP.dat" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Installing GeoIP database...</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <CustomBuildStep>
@@ -198,6 +216,12 @@
       </Command>
     </PreBuildEvent>
     <PreBuildEvent />
+    <PostBuildEvent>
+      <Command>xcopy /y /f "$(ProjectDir)GeoIP.dat" "$(SolutionDir)$(Platform)\$(Configuration)\"</Command>
+    </PostBuildEvent>
+    <PostBuildEvent>
+      <Message>Installing GeoIP database...</Message>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GeoIP.c" />
